Localize landing gallery copy

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -170,6 +170,11 @@
     "chef": "Chef"
   },
   "onboarding": {
+    "goalTitle": "What do you want from this page?",
+    "goalDescription": "We’ll build blocks that get you there faster.",
+    "goalClicks": "Clicks",
+    "goalLeads": "Leads",
+    "goalBookings": "Bookings",
     "nicheTitle": "Choose Your Niche",
     "nicheDescription": "AI will create your personal page in 1 minute",
     "detailsTitle": "Tell Us About Yourself",
@@ -189,6 +194,12 @@
     "pleaseWait": "This will take about 30 seconds"
   },
   "landing": {
+    "gallery": {
+      "badge": "Community",
+      "title": "Explore Community Pages",
+      "subtitle": "Get inspired by amazing pages created by our community",
+      "viewAll": "Explore All Pages"
+    },
     "nav": {
       "signIn": "Sign In",
       "getStarted": "Create",
@@ -545,13 +556,18 @@
   "gallery": {
     "title": "Page Gallery",
     "subtitle": "Get inspired by pages from our community",
+    "filter": "Filter",
+    "all": "All",
     "featured": "Featured",
     "latest": "Latest",
     "popular": "Popular",
     "viewPage": "View",
     "like": "Like",
+    "liked": "Page liked!",
+    "alreadyLiked": "You already liked this page",
     "views": "views",
-    "untitled": "Untitled"
+    "untitled": "Untitled",
+    "empty": "No pages found"
   },
   "errors": {
     "general": "An error occurred",
