--- a/src/i18n/locales/kk.json
+++ b/src/i18n/locales/kk.json
@@ -170,6 +170,11 @@
     "chef": "Аспаз"
   },
   "onboarding": {
+    "goalTitle": "Бұл беттен не алғың келеді?",
+    "goalDescription": "Соған тез жету үшін блоктарды жинаймыз.",
+    "goalClicks": "Клик",
+    "goalLeads": "Өтінім",
+    "goalBookings": "Жазылу",
     "nicheTitle": "Өз саланызды таңдаңыз",
     "nicheDescription": "AI сіздің жеке бетіңізді 1 минутта жасайды",
     "detailsTitle": "Өзіңіз туралы айтыңыз",
@@ -189,6 +194,12 @@
     "pleaseWait": "Бұл шамамен 30 секунд алады"
   },
   "landing": {
+    "gallery": {
+      "badge": "Қауымдастық",
+      "title": "Қауымдастық беттері",
+      "subtitle": "Қауымдастық жасаған беттерден шабыт алыңыз",
+      "viewAll": "Барлық беттерді көру"
+    },
     "nav": {
       "signIn": "Кіру",
       "getStarted": "Жасау",
@@ -545,13 +556,18 @@
   "gallery": {
     "title": "Беттер галереясы",
     "subtitle": "Қоғамдастығымыздың беттерінен шабыт алыңыз",
+    "filter": "Сүзгі",
+    "all": "Барлығы",
     "featured": "Ұсынылған",
     "latest": "Жаңа",
     "popular": "Танымал",
     "viewPage": "Көру",
     "like": "Ұнату",
+    "liked": "Бет ұнады!",
+    "alreadyLiked": "Бұл бетті бұрын ұнатқансыз",
     "views": "қаралымдар",
-    "untitled": "Атаусыз"
+    "untitled": "Атаусыз",
+    "empty": "Беттер табылмады"
   },
   "errors": {
     "general": "Қате орын алды",
