--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -170,6 +170,11 @@
     "chef": "Повар/Кондитер"
   },
   "onboarding": {
+    "goalTitle": "Что ты хочешь получить с этой страницы?",
+    "goalDescription": "Выберем блоки так, чтобы это случилось быстрее.",
+    "goalClicks": "Клики",
+    "goalLeads": "Заявки",
+    "goalBookings": "Запись",
     "nicheTitle": "Выберите вашу нишу",
     "nicheDescription": "AI создаст для вас персональную страницу за минуту",
     "detailsTitle": "Расскажите о себе",
@@ -189,6 +194,12 @@
     "pleaseWait": "Это займёт около 30 секунд"
   },
   "landing": {
+    "gallery": {
+      "badge": "Сообщество",
+      "title": "Страницы сообщества",
+      "subtitle": "Вдохновляйтесь страницами, созданными нашим сообществом",
+      "viewAll": "Посмотреть все страницы"
+    },
     "nav": {
       "signIn": "Войти",
       "getStarted": "Создать",
@@ -545,13 +556,18 @@
   "gallery": {
     "title": "Галерея страниц",
     "subtitle": "Вдохновляйтесь страницами наших пользователей",
+    "filter": "Фильтр",
+    "all": "Все",
     "featured": "Рекомендуемые",
     "latest": "Новые",
     "popular": "Популярные",
     "viewPage": "Открыть",
     "like": "Нравится",
+    "liked": "Страница понравилась!",
+    "alreadyLiked": "Вы уже отметили эту страницу",
     "views": "просмотров",
-    "untitled": "Без названия"
+    "untitled": "Без названия",
+    "empty": "Страницы не найдены"
   },
   "errors": {
     "general": "Произошла ошибка",
