--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -194,6 +194,12 @@
     "pleaseWait": "Это займёт около 30 секунд"
   },
   "landing": {
+    "gallery": {
+      "badge": "Сообщество",
+      "title": "Страницы сообщества",
+      "subtitle": "Вдохновляйтесь страницами, созданными нашим сообществом",
+      "viewAll": "Посмотреть все страницы"
+    },
     "nav": {
       "signIn": "Войти",
       "getStarted": "Создать",
@@ -555,13 +561,18 @@
   "gallery": {
     "title": "Галерея страниц",
     "subtitle": "Вдохновляйтесь страницами наших пользователей",
+    "filter": "Фильтр",
+    "all": "Все",
     "featured": "Рекомендуемые",
     "latest": "Новые",
     "popular": "Популярные",
     "viewPage": "Открыть",
     "like": "Нравится",
+    "liked": "Страница понравилась!",
+    "alreadyLiked": "Вы уже отметили эту страницу",
     "views": "просмотров",
-    "untitled": "Без названия"
+    "untitled": "Без названия",
+    "empty": "Страницы не найдены"
   },
   "errors": {
     "general": "Произошла ошибка",
