fix(i18n): translate landing community gallery copy

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -215,6 +215,11 @@
       "secondaryCta": "View examples",
       "microNote": "Free. Ready builder. In 2 minutes."
     },
+    "gallery": {
+      "badge": "Community",
+      "title": "Explore Community Pages",
+      "subtitle": "Get inspired by amazing pages created by our community"
+    },
     "forWhom": {
       "title": "Who is lnkmx for",
       "expert": {
