--- a/src/i18n/locales/kk.json
+++ b/src/i18n/locales/kk.json
@@ -215,6 +215,11 @@
       "secondaryCta": "Мысалдарды көру",
       "microNote": "Тегін. Дайын конструктор. 2 минутта."
     },
+    "gallery": {
+      "badge": "Қауымдастық",
+      "title": "Қауымдастық беттерін зерттеңіз",
+      "subtitle": "Қауымдастық жасаған керемет беттерден шабыт алыңыз"
+    },
     "forWhom": {
       "title": "lnkmx кімге арналған",
       "expert": {
