--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -215,6 +215,11 @@
       "secondaryCta": "Посмотреть примеры",
       "microNote": "Бесплатно. Готовый конструктор. За 2 минуты."
     },
+    "gallery": {
+      "badge": "Сообщество",
+      "title": "Изучайте страницы сообщества",
+      "subtitle": "Вдохновляйтесь потрясающими страницами, созданными нашим сообществом"
+    },
     "forWhom": {
       "title": "Для кого lnkmx",
       "expert": {
